...
            android:visibility="invisible" />

    </RelativeLayout>


    <TextView
        android:id="@+id/textview_step_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="30dp" />

    <RelativeLayout
        android:id="@+id/next_prev_buttons"
...
